--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dvhb/badbrowser": "^1.2.9",
     "antd": "^3.22.0",
     "babel-plugin-import": "^1.12.0",
+    "classnames": "^2.2.6",
     "formik": "^1.5.8",
+    "js-cookie": "^2.2.1",
+    "layzr.js": "^2.2.2",
+    "normalizr": "^3.4.1",
+    "nprogress": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-promise-middleware": "^6.1.1",
     "redux-thunk": "^2.3.0",
     "yup": "^0.27.0"
   },
